--- a/app/src/main/res/layout/fragment_dingcan.xml
+++ b/app/src/main/res/layout/fragment_dingcan.xml
@@ -3,12 +3,42 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragment.DingcanFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="这是订餐" />
+        android:id="@+id/v4"
+        android:textStyle="bold"
+        android:text="提示:大家只需要在输入框里输入想要的东西，然后点击学长快跑就可以了，真实的APP还在开发中，但由于最近大家下单太多，我们忙不过来，有时候会出现漏单的情况，这只是一个临时为大家方便点餐临时开发的，只要大家下单我们就可以接受订单，可以避免很多漏单！谢谢大家支持我们，我们的群号是：862823096，我们会竭诚为大家提供更好的服务！"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintVertical_bias="0.1"/>
 
+    <EditText
+        android:hint="在这里输入想要的东西，点学长快跑就可以了哦！"
+        android:inputType="textMultiLine"
+        android:id="@+id/ed_info"
+        android:layout_width="300dp"
+        android:layout_height="200dp"
+        app:layout_constraintTop_toBottomOf="@+id/v4"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintVertical_bias="0.3" />
+
+    <Button
+        android:id="@+id/bt_run"
+        android:text="学长快跑"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/ed_info"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintVertical_bias="0.5"
+        />
 </android.support.constraint.ConstraintLayout>
