--- a/app/src/main/res/layout/fragment_dingdan.xml
+++ b/app/src/main/res/layout/fragment_dingdan.xml
@@ -4,11 +4,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragment.DingdanFragment">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/list_dingdan"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="这是订单" />
+        android:orientation="vertical">
 
+    </android.support.v7.widget.RecyclerView>
 </android.support.constraint.ConstraintLayout>
