--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -7,56 +7,71 @@
     tools:context=".view.WelComeActivity"
     tools:layout_editor_absoluteY="81dp">
 
+    <ImageView
+        android:id="@+id/logo"
+        android:src="@drawable/logo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        />
+
     <TextView
         android:id="@+id/settingtitle"
-        android:layout_height="wrap_content"
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="学长快跑点餐系统临时版本"
+        android:textColor="@color/hong"
         android:textSize="24dp"
         android:textStyle="bold"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintVertical_bias="0.05"/>
+        app:layout_constraintTop_toBottomOf="@id/logo"
+        app:layout_constraintVertical_bias="0" />
 
     <TextView
         android:id="@+id/tixing"
-        android:text="请先设置您的默认配送地址哦！"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="请先设置您的默认配送地址哦！"
+        android:textColor="@color/hong"
         android:textSize="18dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/settingtitle"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintVertical_bias="0.05"/>
+        app:layout_constraintVertical_bias="0.05" />
 
     <TextView
         android:id="@+id/v1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="宿舍楼："
+        android:textColor="@color/qing"
         android:textSize="18dp"
-        app:layout_constraintTop_toBottomOf="@id/tixing"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_weight="1"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/sp_sushelou"
+        app:layout_constraintTop_toBottomOf="@id/tixing"
         app:layout_constraintVertical_bias="0.1"
-        app:layout_constraintHorizontal_bias="0.35"/>
+        app:layout_constraintHorizontal_bias="0.5"/>
+
 
     <Spinner
         android:id="@+id/sp_sushelou"
-        android:layout_width="120dp"
-        android:layout_height="wrap_content"
+        android:layout_width="190dp"
+        android:layout_height="35dp"
+        android:background="@drawable/spiner_style"
         android:entries="@array/sushelou"
-        app:layout_constraintTop_toBottomOf="@id/settingtitle"
+        android:paddingLeft="10dp"
+        app:layout_constraintTop_toBottomOf="@id/tixing"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/v1"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintVertical_bias="0.1"
-        app:layout_constraintHorizontal_bias="0.65"
-        app:layout_constraintBaseline_toBaselineOf="@+id/v1"
+        app:layout_constraintHorizontal_weight="1"
+        app:layout_constraintBaseline_toBaselineOf="@id/v1"
         >
 
     </Spinner>
@@ -66,64 +81,70 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="宿舍号："
+        android:textColor="@color/qing"
         android:textSize="18dp"
+        app:layout_constraintLeft_toLeftOf="@id/v1"
         app:layout_constraintTop_toBottomOf="@id/v1"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintVertical_bias="0.1"
-        app:layout_constraintHorizontal_bias="0.35"/>
+         />
+
     <TextView
         android:id="@+id/v3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="手机号："
+        android:textColor="@color/qing"
         android:textSize="18dp"
+        app:layout_constraintLeft_toLeftOf="@id/v2"
         app:layout_constraintTop_toBottomOf="@id/v2"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintVertical_bias="0.1"
-        app:layout_constraintHorizontal_bias="0.35"/>
+        app:layout_constraintVertical_bias="0.1"/>
 
     <EditText
         android:id="@+id/ed_sushehao"
+        android:layout_width="190dp"
+        android:layout_height="35dp"
+        android:background="@drawable/editext_style"
         android:hint="输入宿舍号"
-        android:layout_width="120dp"
-        android:layout_height="wrap_content"
         android:inputType="number"
+        android:paddingLeft="10dp"
         android:maxLength="3"
         android:maxLines="1"
-        app:layout_constraintTop_toBottomOf="@+id/sp_sushelou"
+        app:layout_constraintTop_toBottomOf="@id/sp_sushelou"
+        app:layout_constraintLeft_toLeftOf="@id/sp_sushelou"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.65"
-        app:layout_constraintBaseline_toBaselineOf="@id/v2"/>
+        app:layout_constraintVertical_bias="0.1"
+        app:layout_constraintBaseline_toBaselineOf="@id/v2"
+        />
 
     <EditText
         android:id="@+id/ed_shouji"
+        android:layout_width="190dp"
+        android:layout_height="35dp"
+        android:background="@drawable/editext_style"
         android:hint="输入手机号"
-        android:layout_width="120dp"
-        android:layout_height="wrap_content"
+        android:inputType="number"
+        android:paddingLeft="10dp"
         android:maxLength="11"
         android:maxLines="1"
-        android:inputType="number"
-        app:layout_constraintTop_toBottomOf="@+id/ed_sushehao"
+        app:layout_constraintLeft_toLeftOf="@id/ed_sushehao"
+        app:layout_constraintTop_toBottomOf="@id/ed_sushehao"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.65"
-        app:layout_constraintBaseline_toBaselineOf="@id/v3"/>
+        app:layout_constraintVertical_bias="0.1"
+        app:layout_constraintBaseline_toBaselineOf="@id/v3"
+        />
 
     <Button
         android:id="@+id/bt_baocun"
-        android:text="保存信息"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/ed_shouji"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textColor="@android:color/white"
+        android:text="保存信息"
+        android:background="@drawable/button_style"
+        app:layout_constraintTop_toBottomOf="@id/ed_shouji"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.5" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
 </android.support.constraint.ConstraintLayout>
