--- a/app/src/main/res/layout/fragment_dingcan.xml
+++ b/app/src/main/res/layout/fragment_dingcan.xml
@@ -14,52 +14,66 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:textColor="@color/hong"
+        android:textSize="15dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintVertical_bias="0.1"/>
 
-    <Spinner
-        android:id="@+id/sp_l"
-        android:layout_width="60dp"
-        android:layout_height="35dp"
-        android:background="@drawable/spiner_style"
-        android:entries="@array/sushelou"
-        android:paddingLeft="10dp"
+    <!--<Spinner-->
+        <!--android:id="@+id/sp_l"-->
+        <!--android:layout_width="60dp"-->
+        <!--android:layout_height="35dp"-->
+        <!--android:background="@drawable/spiner_style"-->
+        <!--android:entries="@array/sushelou"-->
+        <!--android:paddingLeft="10dp"-->
+        <!--app:layout_constraintLeft_toLeftOf="parent"-->
+        <!--app:layout_constraintRight_toLeftOf="@id/ed_ss"-->
+        <!--&gt;-->
+
+    <!--</Spinner>-->
+
+    <!--<EditText-->
+        <!--android:id="@+id/ed_ss"-->
+        <!--android:layout_width="100dp"-->
+        <!--android:layout_height="35dp"-->
+        <!--android:background="@drawable/editext_style"-->
+        <!--android:hint="输入宿舍号"-->
+        <!--android:inputType="number"-->
+        <!--android:paddingLeft="5dp"-->
+        <!--android:maxLength="3"-->
+        <!--android:maxLines="1"-->
+        <!--app:layout_constraintLeft_toRightOf="@id/sp_l"-->
+        <!--app:layout_constraintRight_toLeftOf="@id/ed_sj"-->
+        <!--/>-->
+
+    <!--<EditText-->
+        <!--android:id="@+id/ed_sj"-->
+        <!--android:layout_width="100dp"-->
+        <!--android:layout_height="35dp"-->
+        <!--android:background="@drawable/editext_style"-->
+        <!--android:hint="输入手机号"-->
+        <!--android:inputType="number"-->
+        <!--android:paddingLeft="5dp"-->
+        <!--android:maxLength="11"-->
+        <!--android:maxLines="1"-->
+        <!--app:layout_constraintLeft_toRightOf="@id/ed_ss"-->
+        <!--app:layout_constraintRight_toRightOf="parent"-->
+        <!--/>-->
+
+    <TextView
+        android:id="@+id/tv_peisongdizhi"
+        android:text="当前配送地址:"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="15dp"
+        android:textColor="@color/qing"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/ed_ss"
-        >
-
-    </Spinner>
-
-    <EditText
-        android:id="@+id/ed_ss"
-        android:layout_width="100dp"
-        android:layout_height="35dp"
-        android:background="@drawable/editext_style"
-        android:hint="输入宿舍号"
-        android:inputType="number"
-        android:paddingLeft="5dp"
-        android:maxLength="3"
-        android:maxLines="1"
-        app:layout_constraintLeft_toRightOf="@id/sp_l"
-        app:layout_constraintRight_toLeftOf="@id/ed_sj"
-        />
-
-    <EditText
-        android:id="@+id/ed_sj"
-        android:layout_width="100dp"
-        android:layout_height="35dp"
-        android:background="@drawable/editext_style"
-        android:hint="输入手机号"
-        android:inputType="number"
-        android:paddingLeft="5dp"
-        android:maxLength="11"
-        android:maxLines="1"
-        app:layout_constraintLeft_toRightOf="@id/ed_ss"
         app:layout_constraintRight_toRightOf="parent"
-        />
+        app:layout_constraintTop_toBottomOf="@id/v4"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintVertical_bias="0.05"/>
 
     <EditText
         android:background="@color/qing"
@@ -69,15 +83,16 @@
         android:layout_width="300dp"
         android:padding="20dp"
         android:layout_height="110dp"
-        app:layout_constraintTop_toBottomOf="@+id/v4"
+        app:layout_constraintTop_toBottomOf="@+id/tv_peisongdizhi"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintVertical_bias="0.3" />
+        app:layout_constraintVertical_bias="0.1" />
 
     <Button
         android:id="@+id/bt_run"
         android:text="学长快跑"
+        android:textColor="@android:color/white"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/button_style"
